--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </div>
 	</div>
 	
-<center><a target="_blank" style="float:left;text-align:center;position : relative;" ><img src="images\titre.png" alt="Le Piano PD" width="75%" height="75%"></a></center>
+<center><a target="_blank" style="float:left;text-align:center;position : relative;" ><img src="images\SVG-PianoPD.svg" alt="Le Piano PD" width="75%" height="75%"></a></center>
 </header>
 
 
